work on sell page customer selection

--- a/templates/dashboards/manager/verify_orders.html
+++ b/templates/dashboards/manager/verify_orders.html
@@ -427,7 +427,7 @@
 
             .main-content {
                 margin-left: 0;
-                padding-top: 0px;
+                padding-top: 72px;
             }
 
             .h2,
@@ -1358,7 +1358,7 @@
     </header>
 
     <!-- Main content -->
-    <main class="main-content" style="padding-top: 0px;">
+    <main class="main-content">
 
         <div class="main-content-wrapper">
             <!-- Search Bar for Invoice ID and Tracking Status -->
