--- a/templates/dashboards/manager/users.html
+++ b/templates/dashboards/manager/users.html
@@ -922,7 +922,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Password</label>
-                            <input type="password" class="form-control" name="password" required>
+                            <input type="password" class="form-control" name="password" min="6" required>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Role</label>
@@ -978,7 +978,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Password</label>
-                            <input type="input" class="form-control" name="password">
+                            <input type="input" class="form-control" name="password" required>
                         </div>
                     </form>
                 </div>
