--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -1710,11 +1710,24 @@
                                 <div class="section-header">
                                     <span for="customerSelect" class="icon">📦</span>
                                     PRODUCT TABLE
-                                    <button type="button"
-                                        style="border:none;padding: 0px 10px;float: right;background-color: #ffffff;color: #1e094d;"
-                                        id="addCustomerBtn">
-                                        <span id="addProductBtn"> <i class="bi bi-plus-circle"></i> Add Item </span>
-                                    </button>
+                                </div>
+                                <br>
+                                <!-- Step 1: Search production Section -->
+                                <div class="relative">
+                                    <div class="relative">
+                                        <span class="absolute inset-y-0 left-0 pl-3 flex items-center text-slate-400">
+                                            <i class="fas fa-search"></i>
+                                        </span>
+                                        <input type="text" id="productSearch" placeholder="Type product name..."
+                                            class="w-full pl-10 pr-4 py-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all"
+                                            autocomplete="off">
+                                    </div>
+
+                                    <!-- Search Results Dropdown -->
+                                    <div id="productresultsDropdown"
+                                        class="hidden absolute z-10 w-full mt-2 bg-white border border-slate-200 rounded-xl shadow-lg max-h-60 overflow-y-auto custom-scrollbar dropdown-animate">
+                                        <!-- Results will be injected here -->
+                                    </div>
                                 </div>
 
                                 <div class="table-responsive">
@@ -1958,10 +1971,6 @@
                     <div id="printResponseContent" style="display: none;"></div>
                 </div>
                 <div class="modal-footer" id="printPopupFooter" style="display: none;">
-                    <input type="hidden" id="invoiceNumber_for_sharing" name="invoiceNumber_value_for_sharing" value="">
-                    <button type="button" class="btn btn-primary" id="shareBtn"><i class="bi bi-share"></i>
-                        Share</button>
-
                 </div>
             </div>
         </div>
@@ -2141,9 +2150,9 @@
 
             const searchInput = document.getElementById('customerSearch');
             const dropdown = document.getElementById('resultsDropdown');
-            const actionForm = document.getElementById('actionForm');
+            // const actionForm = document.getElementById('actionForm');
             const selectedDisplay = document.getElementById('card');
-            const actionType = document.getElementById('actionType');
+            // const actionType = document.getElementById('actionType');
 
             searchInput.addEventListener("input", debouncedSearch);
 
@@ -2199,6 +2208,8 @@
                 }
             });
 
+            ///// Search Products
+
             // Billing System JavaScript
 
             let products = [];
@@ -2207,22 +2218,103 @@
             const GST_RATE = 18; // 18% GST
             let currentProduct = null;
 
+            async function fetchProducts1(query) {
+
+                if (query === "") {
+                    renderProductDropdown([]);
+                    return;
+                };
+
+                try {
+
+                    const response = await fetch(`/sales/input-products/${encodeURIComponent(query)}`);
+                    const products = await response.json();
+                    renderProductDropdown(products);
+
+                } catch (error) {
+                    console.error("API Error:", error);
+                }
+            }
+
+            const debouncedSearchForProducts = debounce(function (e) {
+                fetchProducts1(e.target.value);
+            }, 500);
+
+            const searchInputForProduct = document.getElementById('productSearch');
+            const productDropdown = document.getElementById('productresultsDropdown');
+            // const productActionForm = document.getElementById('actionForm');
+            // const productSelectedDisplay = document.getElementById('card');
+            // const productActionType = document.getElementById('actionType');
+
+            searchInputForProduct.addEventListener("input", debouncedSearchForProducts);
+
+            function renderProductDropdown(list) {
+
+                if (list.length === 0) {
+                    productDropdown.innerHTML = '<div class="p-4 text-slate-400 text-sm">No customers found</div>';
+                } else {
+                    productDropdown.innerHTML = list.map(c => `
+                    <div onclick="selectProducts(${c.id},'${c.name}','${c.price}')" class="p-3 hover:bg-indigo-50 cursor-pointer flex items-center gap-3 border-b border-slate-50 last:border-none transition-colors">
+                        <div class="w-8 h-8 rounded-full bg-slate-100 flex items-center justify-center text-l font-bold text-slate-500">
+                            ${c.name[0]}${c.price[0]}
+                        </div>
+                        <div>
+                            <div class="text-l font-medium text-slate-800">${c.name} - ₹${c.price}</div>
+                        </div>
+                    </div>
+                `).join('');
+                }
+                productDropdown.classList.remove('hidden');
+                if (list.length === 0) {
+                    setTimeout(() => {
+                        productDropdown.classList.add('hidden');
+                    }, 1000); // Optional delay for smooth transition
+                }
+            }
+
+            // Selection logic
+            window.selectProducts = function (id, name, price) {
+                searchInputForProduct.value = '';
+                productDropdown.classList.add('hidden');
+                // selectedDisplay.classList.remove('hidden');
+
+                
+                const productId = id;
+                currentProduct = productId;
+                if (currentProduct) {
+                    document.getElementById('modalBasePrice').value = price;
+                    document.getElementById('modalQuantity').value = 1;
+                    // document.getElementById('modalIncludeGST').checked = true;
+                    updateModalFinalPrice();
+                }
+                addProduct(id,name,price);
+            }
+
+            window.clearSelection = function () {
+                // selectedDisplay.classList.add('hidden');
+                alert(id, name, price);
+
+            }
+
+            document.addEventListener('click', (e) => {
+                if (!searchInputForProduct.contains(e.target) && !productDropdown.contains(e.target)) {
+                    productDropdown.classList.add('hidden');
+                }
+            });
+
 
             // Load customers and products from the server
-            fetchProducts();
             updateProductTable();
 
 
             fetchEvents();
 
             // Set up event listeners
-            document.getElementById('addProductBtn').addEventListener('click', showProductDetailsModal);
             document.getElementById('addCustomerBtn').addEventListener('click', addCustomerModal);
 
             document.getElementById('confirmAddCustomer').addEventListener('click', addCustomer);
             document.getElementById('confirmAddProduct').addEventListener('click', addProduct);
             document.getElementById('printBtn').addEventListener('click', printBill);
-            document.getElementById('shareBtn').addEventListener('click', shareBill);
             document.getElementById('popupCloseBtn').addEventListener('click', popupClose);
 
             // Modal event listeners
@@ -2380,39 +2472,9 @@
 
             }
 
-            $('#customerSelect').on('select2:select select2:clear', function (e) {
-                var customerId = $('#customerSelect').val();
-            });
-
-
-            // Fetch products from the server
-            function fetchProducts() {
-                fetch('/sales/products')
-                    .then(response => response.json())
-                    .then(data => {
-                        products = data;
-                        const productSelect = $('#modalProductSelect');
-                        productSelect.empty();
-                        productSelect.append('<option value="">Search and select product</option>');
-
-                        data.forEach(product => {
-                            const option = new Option(
-                                `${product.name}`,
-                                product.id,
-                                false,
-                                false
-                            );
-                            productSelect.append(option);
-                        });
-
-                        // Refresh Select2
-                        productSelect.trigger('change');
-                    })
-                    .catch(error => {
-                        console.error('Error fetching products:', error);
-                        alert('Failed to load products. Please refresh the page and try again.');
-                    });
-            }
+            // $('#customerSelect').on('select2:select select2:clear', function (e) {
+            //     var customerId = $('#customerSelect').val();
+            // });
 
             function fetchEvents() {
                 fetch('/sales/all_events_details')
@@ -2469,24 +2531,6 @@
 
             }
 
-            // Show product details modal
-            function showProductDetailsModal() {
-                // Reset modal form
-                $('#modalProductSelect').val('').trigger('change');
-                document.getElementById('modalBasePrice').value = '';
-                document.getElementById('modalQuantity').value = 1;
-                // document.getElementById('modalIncludeGST').checked = true;
-                document.getElementById('modalFinalPrice').value = '';
-
-                // Show modal
-                const modal = new bootstrap.Modal(document.getElementById('productDetailsModal'));
-                modal.show();
-
-                // Focus on the product select and open dropdown
-                setTimeout(() => {
-                    $('#modalProductSelect').select2('open');
-                }, 500);
-            }
 
             // Update modal final price
             function updateModalFinalPrice() {
@@ -2550,7 +2594,8 @@
             }
 
             // Add product to the bill
-            function addProduct() {
+            function addProduct(id,name,price){
+                
                 if (!currentProduct) {
                     alert('Please select a product first.');
                     return;
@@ -2577,7 +2622,7 @@
                 const productTotal = basePrice * quantity;
 
                 // Check if product already exists in the table
-                const existingProductIndex = selectedProducts.findIndex(p => p.id == currentProduct.id);
+                const existingProductIndex = selectedProducts.findIndex(p => p.id == id);
                 if (existingProductIndex !== -1) {
                     // Update the existing product
                     selectedProducts[existingProductIndex].quantity += quantity;
@@ -2585,8 +2630,8 @@
                 } else {
                     // Add new product
                     selectedProducts.push({
-                        id: currentProduct.id,
-                        name: currentProduct.name,
+                        id: id,
+                        name: name,
                         // basePrice: calculatedBasePrice,
                         // gstAmount: gstAmount,
                         finalPrice: basePrice,
@@ -2607,8 +2652,8 @@
                 document.getElementById('modalFinalPrice').value = '';
 
                 // Hide modal
-                const modal = bootstrap.Modal.getInstance(document.getElementById('productDetailsModal'));
-                modal.hide();
+                // const modal = bootstrap.Modal.getInstance(document.getElementById('productDetailsModal'));
+                // modal.hide();
             }
 
             // Update product table
@@ -2884,61 +2929,6 @@
             };
 
 
-            // Handle form submission
-            function shareBill() {
-                const invoiceInput = document.getElementById('invoiceNumber_for_sharing');
-                const invoiceNumber = invoiceInput.value.trim();
-                const selectedText = document.querySelector('#select2-customerSelect-container').textContent;
-
-                if (!invoiceNumber) {
-                    alert('Error: Invoice number is missing. Please generate the invoice before proceeding.');
-                    return;
-                }
-
-
-                fetch(`/sales/share_invoice_pdf/${invoiceNumber}`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ invoice_id: invoiceNumber })
-                })
-                    .then(response => {
-                        if (!response.ok) throw new Error('Network response was not ok');
-                        // Get the PDF as blob instead of JSON
-                        return response.blob();
-                    })
-                    .then(pdfBlob => {
-                        // Create a File object from the blob for sharing
-                        const pdfFile = new File([pdfBlob], `${selectedText}_${invoiceNumber}.pdf`, {
-                            type: 'application/pdf'
-                        });
-
-                        // Check if Web Share API supports files
-                        if (navigator.canShare && navigator.canShare({ files: [pdfFile] })) {
-                            navigator.share({
-                                title: 'Sales Bill',
-                                text: `Here is your invoice #${invoiceNumber} from SalesPro!`,
-                                files: [pdfFile]
-                            }).then(() => {
-                                console.log('PDF shared successfully');
-                            }).catch(err => {
-                                console.error('Sharing failed:', err);
-
-                                // Fallback to download
-                                downloadPDF(pdfBlob, `${selectedText}_${invoiceNumber}.pdf`);
-                            });
-                        } else {
-                            // Fallback: Download the PDF
-                            downloadPDF(pdfBlob, `${selectedText}_${invoiceNumber}.pdf`);
-                        }
-                    })
-                    .catch(err => {
-                        alert('Error while sharing invoice: ' + err.message);
-                    })
-
-            }
-
             window.copyLink = function () {
                 const invoiceNumberElement = document.getElementById('invoiceNumber_for_sharing');
 
@@ -2993,9 +2983,9 @@
                     return;
                 }
 
-                var customerId = $('#customerSelect').val();
+                var customerId = document.getElementById('selectedMobile').textContent;
 
-                if (!customerId) {
+                if (!customerId || customerId === "" || customerId === "N/A") {
                     alert('Please Select a Customer.');
                     return;
                 }
@@ -3011,6 +3001,7 @@
                 // Prepare form data
                 const formData = new FormData(document.getElementById('billingForm'));
                 formData.append('products', JSON.stringify(selectedProducts));
+                formData.append('customerId', JSON.stringify(customerId));
 
                 // Show the modal with loading animation
                 const loadingDots = document.getElementById('printLoadingDots');
