--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -1852,7 +1852,7 @@
                                     style="display: none;margin-top: 20px;">
 
                                     <input type="text" class="form-control" id="transportCompany"
-                                        name="transport_company" hidden>
+                                        name="transport_id" hidden>
 
                                     <!-- Step 1: Search Section -->
                                     <div class="relative">
@@ -2529,10 +2529,10 @@
                     onclick="selectTransport(this)" 
                     class="p-3 hover:bg-indigo-50 cursor-pointer flex items-center gap-3 border-b border-slate-50 last:border-none transition-colors">
                         <div class="w-8 h-8 rounded-full bg-slate-100 flex items-center justify-center text-l font-bold text-slate-500">
-                            ${c.pincode[0]}${c.name[0]}
+                            <i class="fas fa-truck-loading"></i>
                         </div>
                         <div>
-                            <div class="text-l font-medium text-slate-800">${c.pincode} - ${c.name}</div>
+                            <div class="text-l font-medium text-slate-800">${c.pincode} - ${c.name} - ${c.city}</div>
                         </div>
                     </div>
                 `).join('');
@@ -3311,7 +3311,7 @@
                 // Prepare form data
                 const formData = new FormData(document.getElementById('billingForm'));
                 formData.append('products', JSON.stringify(selectedProducts));
-                formData.append('customerId', JSON.stringify(customerId));
+                formData.append('customerId',customerId);
 
                 // Show the modal with loading animation
                 const loadingDots = document.getElementById('printLoadingDots');
